--- a/src/pages/post/post.scss
+++ b/src/pages/post/post.scss
@@ -1,7 +1,4 @@
-page-about {
-    .item-md.item-block .item-inner{
-        border: none !important;
-    }
+page-post {
     .toolbar-md-dark .toolbar-background-md {
         background: linear-gradient(to right, #73395c , #0a2386);
     }
