--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,8 @@
 // http://ionicframework.com/docs/theming/
 
+.meu-popover .popover-content {
+    top: +144px!important;
+}
 
 // App Global Sass
 // --------------------------------------------------
