--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -53,7 +53,7 @@ $colors: (
 // --------------------------------------------------
 // Material Design only Sass variables can go here
 
-
+$popover-md-width: 200px;
 
 
 // App Windows Variables
