--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -3,9 +3,11 @@
 .popover-denuncia .popover-content {
     top: 144px!important;
     right: 7px!important;
+    left: initial!important;
 }
 .popover-top .popover-content {
     top: 90px!important;
+    left: 7px!important;
 }
 // App Global Sass
 // --------------------------------------------------
