--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -54,6 +54,8 @@ $colors: (
 // Material Design only Sass variables can go here
 
 $popover-md-width: 200px;
+$refresher-icon-color: #00a2ed;
+$refresher-text-color: #00a2ed;
 
 
 // App Windows Variables
