--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -9,6 +9,10 @@
     top: 90px!important;
     left: 7px!important;
 }
+.popover-about .popover-content {
+    top: 140px!important;
+    left: 90px!important;
+}
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
