--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -2,4 +2,33 @@ page-register {
     .toolbar-md-dark .toolbar-background-md {
         background: linear-gradient(to right, #73395c , #0a2386);
     }
+    .content-md {
+        background-color: #fff;
+        background-image: url("../assets/imgs/fundo_login.png");
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-origin: border-box;
+        background-clip: border-box;
+        background-attachment: fixed;
+    }
+    .button-facebook {
+        right: 0px;
+        width: 85%;
+        bottom: 50%;
+        position: absolute;
+    }
+    .button-temp {
+        right: 5%;
+        bottom: 5%;
+        position: absolute;
+        color: #fff;
+        font-size: 20px;
+    }
+    .logo-login {
+        right: 25%;
+        bottom: 70%;
+        width: 50%;
+        position: absolute;
+    }
 }
