--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,12 +1,13 @@
 // http://ionicframework.com/docs/theming/
 
 .popover-denuncia .popover-content {
-    top: 170px!important;
+    top: 187px!important;
     right: 30px!important;
     left: initial!important;
 }
 .popover-top .popover-content {
-    top: 90px!important;
+    width: 150px;
+    top: 91px!important;
     left: 7px!important;
 }
 .popover-about .popover-content {
