--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -56,7 +56,7 @@ $colors: (
 $popover-md-width: 200px;
 $refresher-icon-color: #00a2ed;
 $refresher-text-color: #00a2ed;
-
+$popover-ios-arrow-background	: #fff;
 
 // App Windows Variables
 // --------------------------------------------------
