--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -1,4 +1,9 @@
 page-feed {
+  hr.vertical {
+    background-color: #000;
+    width: 1px;
+    height: auto;
+  }
   .buttons_header {
     min-height: 0px;
     height: 30px;
@@ -81,14 +86,14 @@ page-feed {
     top: 16px;
     font-size: 32px;
   }
-  .item-range {
+  .item-range-range {
     height: 24px;
     background: linear-gradient(0deg, #fff 50%, #e9eaee 50%);
     min-height: 0px;
     padding-left: 0px;
     padding-right: 0px;
   }
-  .item-range .item-inner {
+  .item-range-range .item-inner {
     padding: 0px !important;
   }
   .range-range {
@@ -118,6 +123,58 @@ page-feed {
     padding: 0px;
     box-shadow: none;
     color: #00a2e8;
+    width: 14.3%;
     background-color: #e9eaee;
+  }
+  .btn-TopOrNews:hover {
+    background-color: #e9eaee !important;
+  }
+  .item-post-range {
+    margin-top: -2%;
+    height: 24px;
+    background: #7f7f7f;
+    min-height: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .item-post-range .item-inner {
+    padding: 0px !important;
+  }
+  .post-range {
+    padding: 0px !important;
+  }
+  .post-range .range-slider {
+    margin: 0 10% 0 10% !important;
+  }
+  .post-range .range-slider .range-bar {
+    height: 5px;
+    background-color: #7f7f7f;
+    width: 200%;
+    left: -33%;
+  }
+  .post-range .range-slider .range-bar.range-bar-active {
+    background-color: #00a2e8;
+    width: initial;
+  }
+  .post-range .range-slider .range-knob-handle {
+    top: 22px !important;
+  }
+  .post-range .range-slider .range-knob-handle .range-knob {
+    background-color: #0087c1;
+    border: 5px solid #00a2e8;
+  }
+  .btn-star {
+    height: 2rem;
+    border: 0;
+    padding: 0;
+    width: 20%;
+    margin-right: -2.5%;
+    background-color: #fafafa;
+  }
+  .icon-star {
+    font-size: 2rem;
+    line-height: 2rem;
+    height: 2rem;
+    color: #7f7f7f;
   }
 }
