--- a/src/pages/perfil/perfil.scss
+++ b/src/pages/perfil/perfil.scss
@@ -125,16 +125,22 @@ page-perfil {
     right: -3px;
     top: -25px;
     width: 135px;
+    text-transform: none;
+    letter-spacing: 1px;
     animation: ampliar_btn 1s;
     box-shadow: none;
+    background-color: #3897f0;
   }
   .botao-seguir {
     position: relative;
     right: -3px;
     top: -25px;
     width: 75px;
+    text-transform: none;
+    letter-spacing: 1px;
     animation: reduzir_btn 1s;
     box-shadow: none;
+    background-color: #3897f0;
   }
   .button-like {
     position: absolute;
@@ -143,7 +149,7 @@ page-perfil {
   }
   .bola {
     display: inline-block;
-    background-color: #488aff;
+    background-color: #3897f0;
     width: 50px;
     height: 50px;
     position: relative;
