--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -13,9 +13,9 @@ page-register {
         background-attachment: fixed;
     }
     .button-facebook {
-        right: 0px;
-        width: 85%;
-        bottom: 50%;
+        right: 0;
+        height: 18vw;
+        bottom: calc(50% - 9vw);
         position: absolute;
     }
     .button-temp {
@@ -26,9 +26,18 @@ page-register {
         font-size: 20px;
     }
     .logo-login {
-        right: 25%;
-        bottom: 70%;
-        width: 50%;
+        right: calc(50% - 12.5%);
+        bottom: 75%;
+        width: 25%;
         position: absolute;
+    }
+    .texto {
+        text-align: center;
+        color: #fff;
+        font-size: 5vw;
+        width: 40vw;
+        position: absolute;
+        bottom: 68%;
+        right: calc(50% - 20vw);
     }
 }
