--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -4,7 +4,7 @@ page-register {
     }
     .content-md {
         background-color: #fff;
-        background-image: url("../assets/imgs/fundo_login.png");
+        background-image: url("../assets/imgs/fundo_login.jpg");
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
