--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,6 +14,13 @@
     top: 140px!important;
     left: 90px!important;
 }
+.popover-notificacoes .popover-content {
+    max-height: 50vh!important;
+    width: 75vw;
+    right: 5vw!important;
+    top: 50px!important;
+    left: initial!important;
+}
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
