--- a/src/components/popover-opts-anuncios/popover-opts-anuncios.html
+++ b/src/components/popover-opts-anuncios/popover-opts-anuncios.html
@@ -1,5 +1,7 @@
-<ion-list>
-  <ion-item (click)="sair(1)">
-    Top
-  </ion-item>
-</ion-list>
+<ion-content>
+  <ion-list>
+    <ion-item (click)="denunciar()">
+      <h2 style="color: #dc143c;">Denunciar</h2>
+    </ion-item>
+  </ion-list>
+</ion-content>
