--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -111,6 +111,7 @@ page-feed {
     padding: 0px !important;
   }
   .range-range {
+    top: -5px;
     padding: 0px !important;
   }
   .range-range .range-slider {
@@ -230,5 +231,11 @@ page-feed {
     position: absolute;
     right: 10px;
     top: 5px;
+  }
+  .label-md {
+    margin: 0;
+  }
+  .item-md ion-avatar{
+    margin: 0 16px 0 0 !important;
   }
 }
