--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -1,6 +1,6 @@
 page-register {
     .toolbar-md-dark .toolbar-background-md {
-        background: linear-gradient(to right, #73395c , #0a2386);
+        background-color: #00bbe3;
     }
     .content-md {
         background-color: #fff;
