--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -3,6 +3,6 @@ page-about {
         border: none !important;
     }
     .toolbar-md-dark .toolbar-background-md {
-        background: linear-gradient(to right, #73395c , #0a2386);
+        background-color: #00bbe3;
     }
 }
