--- a/src/pages/comments/comments.scss
+++ b/src/pages/comments/comments.scss
@@ -1,6 +1,6 @@
 page-comments {
     .toolbar-md-dark .toolbar-background-md {
-        background: linear-gradient(to right, #73395c , #0a2386);
+        background-color: #00bbe3;
     }
 
     .botao-trash {
