--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -25,7 +25,7 @@ page-feed {
     color: #488aff;
   }
   .toolbar-md-dark .toolbar-background-md {
-    background: linear-gradient(to right, #73395c, #0a2386);
+    background-color: #00bbe3;
   }
   .segment-md .segment-button {
     color: #000 !important;
