--- a/src/pages/perfil/perfil.scss
+++ b/src/pages/perfil/perfil.scss
@@ -1,6 +1,6 @@
 page-perfil {
   .toolbar-md-dark .toolbar-background-md {
-    background: linear-gradient(to right, #73395c, #0a2386);
+    background-color: #00bbe3;
   }
   .item-md.item-block .item-inner {
     border: 0;
