--- a/src/pages/stats/stats.scss
+++ b/src/pages/stats/stats.scss
@@ -1,5 +1,5 @@
 page-stats {
   .toolbar-md-dark .toolbar-background-md {
-    background: linear-gradient(to right, #73395c, #0a2386);
+    background-color: #00bbe3;
   }
 }
