--- a/src/pages/perfil/perfil.scss
+++ b/src/pages/perfil/perfil.scss
@@ -1,6 +1,6 @@
 page-perfil {
   .toolbar-md-dark .toolbar-background-md {
-    background-color: #00bbe3;
+    background: linear-gradient(45deg, rgba(55, 197, 233, 1) 0%, rgba(73, 125, 190, 1) 100%);
   }
   .item-md.item-block .item-inner {
     border: 0;
@@ -30,7 +30,7 @@ page-perfil {
     padding: 0px !important;
   }
   .fundo-perfil {
-    background-image: url("../assets/imgs/fundo_perfil.jpg");
+    background: #007186;
     background-size: cover;
     padding: 5% 0px 0px 0px;
   }
