--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -3,6 +3,6 @@ page-about {
         border: none !important;
     }
     .toolbar-md-dark .toolbar-background-md {
-        background-color: #00bbe3;
+        background: linear-gradient(45deg, rgba(55, 197, 233, 1) 0%, rgba(73, 125, 190, 1) 100%);
     }
 }
