--- a/src/pages/feed/feed.scss
+++ b/src/pages/feed/feed.scss
@@ -9,8 +9,8 @@ page-feed {
   }
   // IMAGES //
   img.imageLogoFeed {
-    height: 50px;
-    margin: 0 0 -4px -12px
+    height: 40px;
+    margin: 4px 0px -4px -2px;
   }
   img.imageUserFeed {
     height: 32px;
@@ -25,7 +25,7 @@ page-feed {
     color: #488aff;
   }
   .toolbar-md-dark .toolbar-background-md {
-    background-color: #00bbe3;
+    background: linear-gradient(45deg, rgba(55, 197, 233, 1) 0%, rgba(73, 125, 190, 1) 100%);
   }
   .segment-md .segment-button {
     color: #000 !important;
