--- a/src/pages/post/post.scss
+++ b/src/pages/post/post.scss
@@ -1,5 +1,5 @@
 page-post {
     .toolbar-md-dark .toolbar-background-md {
-        background-color: #00bbe3;
+        background: linear-gradient(45deg, rgba(55, 197, 233, 1) 0%, rgba(73, 125, 190, 1) 100%);
     }
 }
